بهبود مدیریت هدرها در میدلور بارگذاری فایل‌ها با تبدیل هدرهای ورودی به شیء ساده. اضافه کردن لاگ برای نمایش هدرها و نوع محتوا. اصلاح پیام خطا در صورت عدم وجود هدر Content-Type.

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
             <strong>POST /api/rag/upload-text</strong> - Upload Text Content
         </div>
         
-        <div class="endpoint" style="background: #ffe6e6; border-color: #dc3545;">
-            <strong>POST /api/rag/upload</strong> - Upload Word Files (Disabled on Vercel)
+        <div class="endpoint">
+            <strong>POST /api/rag/upload</strong> - Upload Word Files (Max 2MB)
         </div>
         
         <div class="endpoint">
