اضافه کردن راهنمای استفاده از endpoint آپلود فایل Word به API و به‌روزرسانی مستندات HTML برای توضیحات بیشتر در مورد نحوه ارسال فایل‌ها. همچنین، بهبود پردازش فایل‌های آپلود شده با استفاده از formidable و اضافه کردن مدیریت خطاهای مربوط به نوع و اندازه فایل.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,8 @@
         </div>
         
         <div class="endpoint">
-            <strong>POST /api/rag/upload</strong> - Upload Word Files (Max 2MB)
+            <strong>POST /api/rag/upload</strong> - Upload Word Files via Base64 (Max 2MB)
+            <br><small>Send JSON: {"fileName": "doc.docx", "fileData": "base64...", "fileType": "application/vnd..."}</small>
         </div>
         
         <div class="endpoint">
