اضافه کردن وابستگی formidable به package.json و به‌روزرسانی مستندات HTML برای توضیحات جدید در مورد آپلود فایل‌های Word. همچنین، بهبود پردازش فایل‌های آپلود شده با استفاده از formidable و اضافه کردن راهنمای استفاده از endpoint آپلود فایل.

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,8 @@
         </div>
         
         <div class="endpoint">
-            <strong>POST /api/rag/upload</strong> - Upload Word Files via Base64 (Max 2MB)
-            <br><small>Send JSON: {"fileName": "doc.docx", "fileData": "base64...", "fileType": "application/vnd..."}</small>
+            <strong>POST /api/rag/upload</strong> - Upload Word Files (Max 2MB)
+            <br><small>Send multipart/form-data with field name "file"</small>
         </div>
         
         <div class="endpoint">
