به‌روزرسانی اسکریپت‌های package.json با تغییر متن پیام‌های ساخت و به‌روزرسانی نسخه Node.js به ۱۸.۰.۰ یا بالاتر. این تغییرات به بهبود شفافیت در فرآیند ساخت API کمک می‌کند.

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
 <body>
     <div class="container">
         <h1>🤖 FindLanQBot API</h1>
-        <p>AI Chat Platform with Hono Backend and Next.js Frontend</p>
+        <p><strong>Backend Service:</strong> AI Chat Platform API built with Hono.js</p>
+        <p><span style="background: #28a745; color: white; padding: 4px 8px; border-radius: 4px;">🟢 API Active</span></p>
         
         <h2>API Endpoints:</h2>
         
