حذف خط خالی از فایل .vercelignore برای بهبود خوانایی و سازماندهی بهتر. این تغییر به بهینه‌سازی پیکربندی Vercel کمک می‌کند.

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
         <p>✅ Turso Cloud SQLite Database</p>
         
         <h2>Technologies:</h2>
+        <h2>Technologies:</h2>
         <ul>
             <li>Hono.js - Web Framework</li>
             <li>Turso - Cloud SQLite Database</li>
