به‌روزرسانی فایل‌های پیکربندی Vercel با اضافه کردن مسیرهای جدید برای فایل‌های استاتیک و API. همچنین، به‌روزرسانی اسکریپت‌های package.json و بهبود خوانایی فایل .vercelignore. این تغییرات به بهینه‌سازی فرآیند ساخت و استقرار کمک می‌کند.

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
 <body>
     <div class="container">
         <h1>🤖 FindLanQBot API</h1>
-        <p><strong>Backend Service:</strong> AI Chat Platform API built with Hono.js</p>
+        <p><strong>⚠️ BACKEND ONLY:</strong> This is a Node.js API built with Hono.js</p>
+        <p><strong>NOT Next.js:</strong> Pure serverless functions</p>
         <p><span style="background: #28a745; color: white; padding: 4px 8px; border-radius: 4px;">🟢 API Active</span></p>
         
         <h2>API Endpoints:</h2>
